--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@
     #position {
         float: right;
         float: top;
+        width: 600px;
     }
     li {
         list-style-type: square;
